--- a/uti-lib/index.html
+++ b/uti-lib/index.html
@@ -5,6 +5,8 @@
     <title>Util Fn</title>
 </head>
 <body>
+<div id="target">target</div>
+<div id="cancel">cancel</div>
 <script type="module" src="main.js"></script>
 </body>
 </html>
