--- a/uti-lib/index.html
+++ b/uti-lib/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Util Fn</title>
+    <style>
+    body {
+        user-select: none;
+    }
+    </style>
 </head>
 <body>
 <div id="target">target</div>
